--- a/changeCRS.ipynb
+++ b/changeCRS.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1c63dca2-b73c-44b1-9485-bd923d7577d8",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
@@ -16,12 +18,31 @@
     "    gdf_converted = gdf.to_crs(CRS.from_user_input(target_crs))\n",
     "\n",
     "    gdf_converted.to_file(output_file)\n",
-    "input_shp = './ThuanHoa/KhoanhDat/ThuanHoa_TKDD2022.shp' \n",
-    "output_shp = 'duong_dan_toi_file_dau_ra.shp'  \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "550a4d35-51d2-49c9-a182-19f403c045ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example\n",
+    "input_shp = './output/KetQuaPhanLoai/KetQuaPhanLoai.shp' \n",
+    "output_shp = './output/KetQuaPhanLoai_changedCRS/ThuanHoa_TKDD2022_CRS4326.shp'  \n",
     "target_crs = 'EPSG:4326'  \n",
     "\n",
-    "convert_crs(input_shp, output_shp, target_crs)\n"
+    "convert_crs(input_shp, output_shp, target_crs)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1d5dd40-5588-471b-bd73-37d4fe98a21a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
