--- a/train.ipynb
+++ b/train.ipynb
@@ -1792,7 +1792,7 @@
    "outputs": [],
    "source": [
     "# cấu hình thời gian lấy ảnh và tọa độ\n",
-    "date_range = ('2022-09-01', '2023-10-01')\n",
+    "date_range = ('2022-09x`-01', '2023-10-01')\n",
     "longtitude_range = (105.5, 106.4)\n",
     "latitude_range = (9.2, 10.0) \n",
     "\n",
